fix overflow on right (mobile)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -293,6 +293,7 @@ h1{
             padding-left: 0 !important;
             margin-left: 24px !important;
             margin-bottom: 45px !important;
+            margin-right: 24px;
         }
         .pos-left .card-body{
             padding-right: 40px;
